apps/rbnis/components/istio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rbnis
  namespace: rbnis
spec:
  hosts:
    - "rbn.is"
    - "*.rbn.is"
  gateways:
    - rbnis
  http:
    - name: wildcard-redirect
      match:
        - authority:
            regex: ".*.rbn.is"
      redirect:
        authority: "rbn.is"
        redirectCode: 302
    - name: rbnis
      route:
        - destination:
            host: rbnis.rbnis.svc.cluster.local
